<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="265dp"
    android:background="?attr/secondaryBackgroundColor">

    <android.support.v7.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:columnCount="3"
        app:layout_constraintBottom_toTopOf="@+id/placeOrderButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:orientation="vertical"
        app:rowCount="4">

        <Button
            android:id="@+id/button1"
            style="@style/PinPadButton"
            android:gravity="center"
            android:text="@string/PINPAD_1"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"
            app:layout_row="0"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button2"
            style="@style/PinPadButton"
            android:text="@string/PINPAD_2"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"
            app:layout_row="0"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button3"
            style="@style/PinPadButton"
            android:text="@string/PINPAD_3"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"
            app:layout_row="0"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button7"
            style="@style/PinPadButton"
            android:text="@string/PINPAD_7"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"
            app:layout_row="2"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button4"
            style="@style/PinPadButton"
            android:text="@string/PINPAD_4"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"
            app:layout_row="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button5"
            style="@style/PinPadButton"
            android:text="@string/PINPAD_5"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"
            app:layout_row="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button6"
            style="@style/PinPadButton"
            android:text="@string/PINPAD_6"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"
            app:layout_row="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button8"
            style="@style/PinPadButton"
            android:text="@string/PINPAD_8"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"
            app:layout_row="2"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button9"
            style="@style/PinPadButton"
            android:text="@string/PINPAD_9"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"
            app:layout_row="2"
            app:layout_rowWeight="1" />

        <ImageButton
            android:id="@+id/buttonDecimal"
            style="@style/PinPadButton"
            android:src="@drawable/ic_decimal"
            android:visibility="invisible"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"
            app:layout_row="3"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button0"
            style="@style/PinPadButton"
            android:text="@string/PINPAD_0"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"
            app:layout_row="3"
            app:layout_rowWeight="1" />

        <ImageButton
            android:id="@+id/buttonBackSpace"

            style="@style/PinPadButton"
            android:src="@drawable/ic_backspace"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"
            app:layout_row="3"
            app:layout_rowWeight="1" />

    </android.support.v7.widget.GridLayout>

    <View
        android:id="@+id/view9"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:background="?attr/primaryBackgroundColor"
        app:layout_constraintBottom_toTopOf="@+id/placeOrderButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/gridLayout" />

    <View
        android:id="@+id/view15"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:background="?attr/primaryBackgroundColor"
        app:layout_constraintBottom_toTopOf="@id/placeOrderButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.66"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/gridLayout" />

    <View
        android:id="@+id/view10"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="?attr/primaryBackgroundColor"
        app:layout_constraintBottom_toBottomOf="@id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/gridLayout"
        app:layout_constraintVertical_bias="0.75" />

    <View
        android:id="@+id/view11"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="?attr/primaryBackgroundColor"
        app:layout_constraintBottom_toBottomOf="@id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/gridLayout"
        app:layout_constraintVertical_bias="0.50" />

    <View
        android:id="@+id/view12"
        android:layout_width="0dp"

        android:layout_height="1dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="?attr/primaryBackgroundColor"
        app:layout_constraintBottom_toBottomOf="@id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/gridLayout"
        app:layout_constraintVertical_bias="0.25" />

    <Button
        android:id="@+id/placeOrderButton"
        style="@style/AccentButton.Rounded"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/disable_accent_button"
        android:text="@string/SEND_Review"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>