<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:id="@+id/graphLayout"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toTopOf="@+id/intervalButtonLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@android:color/white">

        <com.robinhood.spark.SparkView
            android:id="@+id/sparkview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/progressBar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:visibility="gone"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loader_portfolio" />

    </FrameLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/emptyWalletContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/intervalButtonLayout"
        app:layout_constraintTop_toTopOf="@+id/graphLayout">

        <Button
            android:id="@+id/emptyPortfolioActionButton"
            style="@style/AccentButton.Rounded"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:text="@string/PORTFOLIO_deposit_tokens"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/emptyPortfolioTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/PORTOFOLIO_wallet_is_empty"
            android:textAppearance="@style/SubtitleText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView7" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="45dp"
            android:layout_height="42dp"
            android:layout_marginTop="16dp"
            android:alpha="0.3"
            android:src="@drawable/ic_tab_portfolio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:id="@+id/intervalButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/graphLayout">

        <Button
            android:id="@+id/sixHourInterval"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:tag="6H"
            android:text="@string/PORTFOLIO_six_hours"
            android:textAppearance="@style/IntervalButtonText.NotSelected" />

        <Button
            android:id="@+id/oneDayInterval"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:tag="24H"
            android:text="@string/PORTFOLIO_one_day"
            android:textAppearance="@style/IntervalButtonText.Selected" />

        <Button
            android:id="@+id/oneWeekInterval"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:tag="1W"
            android:text="@string/PORTFOLIO_one_week"
            android:textAppearance="@style/IntervalButtonText.NotSelected" />

        <Button
            android:id="@+id/oneMonthInterval"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:tag="1M"
            android:text="@string/PORTFOLIO_one_month"
            android:textAppearance="@style/IntervalButtonText.NotSelected" />

        <Button
            android:id="@+id/threeMonthInterval"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:tag="3M"
            android:text="@string/PORTFOLIO_three_month"
            android:textAppearance="@style/IntervalButtonText.NotSelected" />

        <Button
            android:id="@+id/allInterval"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:tag="all"
            android:text="@string/PORTFOLIO_all"
            android:textAppearance="@style/IntervalButtonText.NotSelected" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>