<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/secondaryBackgroundColor"
    tools:context=".Onboarding.CreateKey.DialogWalletGeneratedFragment">


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animatedDialogAnimationView"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_rawRes="@raw/wallet_generated" />

    <TextView
        android:id="@+id/animatedDialogTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/ONBOARDING_wallet_generated_title"
        android:textAlignment="center"
        android:textAppearance="@style/RegularText.Bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animatedDialogAnimationView" />

    <TextView
        android:id="@+id/animatedDialogSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/ONBOARDING_wallet_generated_subtitle"
        android:textAlignment="center"
        android:textAppearance="@style/RegularSubtitleText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animatedDialogTitle" />


    <Button
        android:id="@+id/animatedDialogConfirmButton"
        style="@style/AlertButton"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/ALERT_OK_Confirm_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animatedDialogSubtitle" />

</androidx.constraintlayout.ConstraintLayout>